--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-07-23 21:05:33
-# Total rules: 4995
+# Generated from relevant_rules_wildcard_aware.txt on 2025-07-24 09:08:12
+# Total rules: 4821
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -12,7 +12,6 @@
 .12551-1311572332.cos.ap-shanghai.myqcloud.com
 .1437953666.rsc.cdn77.org
 .1480876790.rsc.cdn77.org
-.1493361689.rsc.cdn77.org
 .1529462937.rsc.cdn77.org
 .1548164934.rsc.cdn77.org
 .1558334541.rsc.cdn77.org
@@ -49,7 +48,6 @@
 .a1.api.bbc.co.uk
 .a1.api.bbc.com
 .a1.itc.cn
-.a125375509.cdn.optimizely.com
 .a8bea9eb5d.com
 .a8clk.macpaw.com
 .aa.zdnet.com
@@ -74,7 +72,6 @@
 .activity.browser.intl.miui.com
 .acttg.eastmoney.com
 .ad-1258444056.cos.accelerate.myqcloud.com
-.ad-assets.futurecdn.net
 .ad-creatives-public.commondatastorage.googleapis.com
 .ad-log-upload.mihoyo.com
 .ad-serve.b-cdn.net
@@ -291,7 +288,6 @@
 .adsmind.gdtimg.com
 .adsmind.tc.qq.com
 .adsninja.b-cdn.net
-.adsninjacdn.b-cdn.net
 .adsqqclick.qq.com
 .adsrich.qq.com
 .adsrvr.org
@@ -386,7 +382,6 @@
 .amfi.gou.sogou.com
 .amp-error-reporting.appspot.com
 .amplitude.com
-.ampmetrics.engadget.com
 .amptrack-dailymail-co-uk.cdn.ampproject.org
 .ams-pageview-public.s3.amazonaws.com
 .an.facebook.com
@@ -394,7 +389,6 @@
 .analytics-alv.google.com
 .analytics-consent-manager-v2-prod.azureedge.net
 .analytics-consent-manager.azureedge.net
-.analytics-digit-in.cdn.ampproject.org
 .analytics-events.apple.com
 .analytics-prod-alb-292764149.us-west-2.elb.amazonaws.com
 .analytics-sg.tiktok.com
@@ -469,7 +463,6 @@
 .api.miwifi.com
 .api.mp.uc.cn
 .api.newsfeed.intl.miui.com
-.api.sec.intl.miui.com
 .api.setting.intl.miui.com
 .api.sprig.com
 .api.stacksocial.com
@@ -519,10 +512,8 @@
 .as.baidu.com
 .as.mgtv.com
 .as1.wenku.baidu.com
-.as54rdxfzxs.appspot.com
 .ascpqnj-oam.global.ssl.fastly.net
 .asearch.alicdn.com
-.asgh65tfsdxz.appspot.com
 .asia-northeast1-affiliate-pr.cloudfunctions.net
 .assp.sohu.com
 .atanx.alicdn.com
@@ -605,44 +596,6 @@
 .biz.weibo.com
 .bj.bcebos.com
 .bldr.mkt.samsung.com
-.bn2wns1.wns.windows.com
-.bn3sch020010558.wns.windows.com
-.bn3sch020010560.wns.windows.com
-.bn3sch020010618.wns.windows.com
-.bn3sch020010629.wns.windows.com
-.bn3sch020010631.wns.windows.com
-.bn3sch020010635.wns.windows.com
-.bn3sch020010636.wns.windows.com
-.bn3sch020010650.wns.windows.com
-.bn3sch020011727.wns.windows.com
-.bn3sch020012850.wns.windows.com
-.bn3sch020020322.wns.windows.com
-.bn3sch020020749.wns.windows.com
-.bn3sch020022328.wns.windows.com
-.bn3sch020022335.wns.windows.com
-.bn3sch020022361.wns.windows.com
-.bn4sch101120814.wns.windows.com
-.bn4sch101120818.wns.windows.com
-.bn4sch101120911.wns.windows.com
-.bn4sch101120913.wns.windows.com
-.bn4sch101121019.wns.windows.com
-.bn4sch101121109.wns.windows.com
-.bn4sch101121118.wns.windows.com
-.bn4sch101121223.wns.windows.com
-.bn4sch101121407.wns.windows.com
-.bn4sch101121618.wns.windows.com
-.bn4sch101121704.wns.windows.com
-.bn4sch101121709.wns.windows.com
-.bn4sch101121714.wns.windows.com
-.bn4sch101121908.wns.windows.com
-.bn4sch101122117.wns.windows.com
-.bn4sch101122310.wns.windows.com
-.bn4sch101122312.wns.windows.com
-.bn4sch101122421.wns.windows.com
-.bn4sch101123108.wns.windows.com
-.bn4sch101123110.wns.windows.com
-.bn4sch101123202.wns.windows.com
-.bn4sch102110124.wns.windows.com
 .bobo.163.com
 .bobo.corp.163.com
 .bole.shangshufang.ksosoft.com
@@ -687,7 +640,6 @@
 .c0nt4ct-me.pages.dev
 .c1-stats.shopifysvc.com
 .c783.fastcompany.com
-.cache.datamart.windows.com
 .caclick.baidu.com
 .cad.youku.com
 .calopenupdate.comm.miui.com
@@ -696,7 +648,6 @@
 .cams.xvideos.com
 .capture.condenastdigital.com
 .carbonads.com
-.care.help.360.cn
 .carpe.pages.dev
 .cars.toutiao.com
 .caspionlog.appspot.com
@@ -715,7 +666,6 @@
 .cdn-bongdadem-net.cdn.ampproject.org
 .cdn-ketchapp.akamaized.net
 .cdn.ark.qq.com
-.cdn.cookielaw.org
 .cdn.onesignal.com
 .cdn.tanx.com
 .cdnweb3.pages.dev
@@ -873,8 +823,6 @@
 .cstm.baidu.com
 .ctobsnssdk.com
 .ctr.hd.sohu.com
-.cu-cn-north00001.gala.convection.cn
-.cu-cn-north00002.gala.convection.cn
 .customerevents.dradis.netflix.com
 .customerevents.netflix.com
 .cxense.com
@@ -2158,7 +2106,6 @@
 .d9yk47of1efyy.cloudfront.net
 .da.mgtv.com
 .da.netease.com
-.da032opzasz.appspot.com
 .da26k71rxh0kb.cloudfront.net
 .da327va27j0hh.cloudfront.net
 .da3uf5ucdz00u.cloudfront.net
@@ -2347,7 +2294,6 @@
 .dgpp7fq3iorb.cloudfront.net
 .dgw7ae5vrovs7.cloudfront.net
 .dgyrizngtcfck.cloudfront.net
-.dgyu536ds.appspot.com
 .dh0c1bz67fuho.cloudfront.net
 .dh0uktvqfaomb.cloudfront.net
 .dh6dm31izb875.cloudfront.net
@@ -2362,7 +2308,6 @@
 .diagnostics.support.microsoft.com
 .dianying-1304791696.cos.ap-shanghai.myqcloud.com
 .dic9vgwbkxd8r.cloudfront.net
-.didna.b-cdn.net
 .dig.bdurl.net
 .dig.lianjia.com
 .digital-ads.s3.amazonaws.com
@@ -2699,7 +2644,6 @@
 .entry.baidu.com
 .epro.sogou.com
 .epro.sohu.com
-.eqit9pzsxz.appspot.com
 .erebor.douban.com
 .ereg.adobe.com
 .error-analytics-sessions-production.shopifysvc.com
@@ -2765,7 +2709,6 @@
 .feed-image.baidu.com
 .feed.baidu.com
 .feedback-c.zijieapi.com
-.feedback.uc.cn
 .fengkongcloud.com
 .fexclick.baidu.com
 .ffbbbdc6d3c353211fe2ba39c9f744cd.com
@@ -2852,7 +2795,6 @@
 .gb.corp.163.com
 .gc.sec.miui.com
 .gcapi.sy.kugou.com
-.gdh4szx.appspot.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gecko.snssdk.com
@@ -2957,91 +2899,12 @@
 .heoads.b-cdn.net
 .hesads.akamaized.net
 .hg-statsd.setapp.com
-.hg76ytsdas.appspot.com
 .hijack.baidu.com
 .hilton.data.adobedc.net
 .hits.theguardian.com
-.hj67fadszx.appspot.com
 .hjkhxfh.360doc.cn
 .hk.napi.ucweb.com
-.hk2.wns.windows.com
-.hk2sch130020721.wns.windows.com
-.hk2sch130020723.wns.windows.com
-.hk2sch130020726.wns.windows.com
-.hk2sch130020729.wns.windows.com
-.hk2sch130020732.wns.windows.com
-.hk2sch130020824.wns.windows.com
-.hk2sch130020843.wns.windows.com
-.hk2sch130020851.wns.windows.com
-.hk2sch130020854.wns.windows.com
-.hk2sch130020855.wns.windows.com
-.hk2sch130020924.wns.windows.com
-.hk2sch130020936.wns.windows.com
-.hk2sch130020940.wns.windows.com
-.hk2sch130020956.wns.windows.com
-.hk2sch130020958.wns.windows.com
-.hk2sch130020961.wns.windows.com
-.hk2sch130021017.wns.windows.com
-.hk2sch130021029.wns.windows.com
-.hk2sch130021035.wns.windows.com
-.hk2sch130021137.wns.windows.com
-.hk2sch130021142.wns.windows.com
-.hk2sch130021153.wns.windows.com
-.hk2sch130021217.wns.windows.com
-.hk2sch130021246.wns.windows.com
-.hk2sch130021249.wns.windows.com
-.hk2sch130021260.wns.windows.com
-.hk2sch130021264.wns.windows.com
-.hk2sch130021322.wns.windows.com
-.hk2sch130021323.wns.windows.com
-.hk2sch130021329.wns.windows.com
-.hk2sch130021334.wns.windows.com
-.hk2sch130021360.wns.windows.com
-.hk2sch130021432.wns.windows.com
-.hk2sch130021433.wns.windows.com
-.hk2sch130021435.wns.windows.com
-.hk2sch130021437.wns.windows.com
-.hk2sch130021440.wns.windows.com
-.hk2sch130021450.wns.windows.com
-.hk2sch130021518.wns.windows.com
-.hk2sch130021523.wns.windows.com
-.hk2sch130021526.wns.windows.com
-.hk2sch130021527.wns.windows.com
-.hk2sch130021544.wns.windows.com
-.hk2sch130021554.wns.windows.com
-.hk2sch130021618.wns.windows.com
-.hk2sch130021634.wns.windows.com
-.hk2sch130021638.wns.windows.com
-.hk2sch130021646.wns.windows.com
-.hk2sch130021652.wns.windows.com
-.hk2sch130021654.wns.windows.com
-.hk2sch130021657.wns.windows.com
-.hk2sch130021723.wns.windows.com
-.hk2sch130021726.wns.windows.com
-.hk2sch130021727.wns.windows.com
-.hk2sch130021730.wns.windows.com
-.hk2sch130021731.wns.windows.com
-.hk2sch130021754.wns.windows.com
-.hk2sch130021829.wns.windows.com
-.hk2sch130021830.wns.windows.com
-.hk2sch130021833.wns.windows.com
-.hk2sch130021840.wns.windows.com
-.hk2sch130021842.wns.windows.com
-.hk2sch130021851.wns.windows.com
-.hk2sch130021852.wns.windows.com
-.hk2sch130021927.wns.windows.com
-.hk2sch130021928.wns.windows.com
-.hk2sch130021929.wns.windows.com
-.hk2sch130021958.wns.windows.com
-.hk2sch130022035.wns.windows.com
-.hk2sch130022041.wns.windows.com
-.hk2sch130022049.wns.windows.com
-.hk2sch130022135.wns.windows.com
-.hk2wns1.wns.windows.com
-.hk2wns1b.wns.windows.com
-.hk567rsda.appspot.com
 .hkrpg-log-upload.mihoyo.com
-.hksdf924pzxoias.appspot.com
 .hl2rcv.adobe.com
 .hlrcv.stage.adobe.com
 .hm.baidu.com
@@ -3124,7 +2987,6 @@
 .idm.bce.baidu.com
 .iebar.baidu.com
 .ieonline.microsoft.com
-.ieonlinews.microsoft.com
 .ietheivaicai.com
 .if.mingxing.qq.com
 .ifacelog.iqiyi.com
@@ -3190,7 +3052,6 @@
 .install2.kugou.com
 .installer.xiaomi.com
 .instant-e-app-for-campaign.github.io
-.instory-log.ucnews.ucweb.com
 .int.dpool.sina.com.cn
 .intake-analytics.wikimedia.org
 .intake-logging.wikimedia.org
@@ -3218,10 +3079,8 @@
 .itsdata.map.baidu.com
 .ivy.pconline.com.cn
 .iwallet-1258175138.file.myqcloud.com
-.iwan-s.video.qq.com
 .iwan.sogou.com
 .iwanad.baidu.com
-.iwe8pzosa.appspot.com
 .iyes.youku.com
 .j.br.baidu.com
 .j.wit.qq.com
@@ -3255,22 +3114,17 @@
 .jun01.oss-cn-beijing.aliyuncs.com
 .jzt.jd.com
 .k.qwant.com
-.k87yfgsdaa.appspot.com
 .kalstats.kaltura.com
 .kcqoej.roborock.com
 .kde.qq.com
 .kepler.jd.com
-.kga9szxosa.appspot.com
 .kgipadstat.kugou.com
 .kgipadstatbak.kugou.com
 .kgmobilestat.kugou.com
 .kgmobilestatbak.kugou.com
 .kinesis.eu-west-1.amazonaws.com
-.kj65rdasz.appspot.com
-.kj6787rsd.appspot.com
 .kmmgoogle.oss-ap-southeast-1.aliyuncs.com
 .knicks.jd.com
-.kr9apzxosa.appspot.com
 .kstj.baidu.com
 .kuiniuca.com
 .kwurl.ucweb.com
@@ -3369,7 +3223,6 @@
 .logstat.kugou.com
 .logtake.weidian.com
 .logtj.kugou.com
-.logu.hpplay.cn
 .logwebs.kugou.com
 .logx-experimentation.iherb.com
 .logx.optimizely.com
@@ -3421,7 +3274,6 @@
 .mail-ads.google.com
 .mail-cytanet.pages.dev
 .mailmunch.s3.amazonaws.com
-.mailsupport-24f7f1500ed129bc71f2ad9c06fe1e73.pages.dev
 .mapi.m.jd.com
 .mapp.qzone.qq.com
 .market-fin.meituan.com
@@ -3431,7 +3283,6 @@
 .marketing.alibaba.com
 .marketing.dropbox.com
 .marketing.mangacopy.com
-.marketingplatform.google.com
 .martech.condenastdigital.com
 .masdk.3g.qq.com
 .masdkv6.3g.qq.com
@@ -3446,7 +3297,6 @@
 .mcdn.bilivideo.cn
 .mcdn.bilivideo.com
 .mcgi.v.qq.com
-.mclean.f.360.cn
 .mclick.simba.taobao.com
 .mcs-sg.tiktok.com
 .mcs-va-useast2a.tiktokv.com
@@ -3530,7 +3380,6 @@
 .mobilem.360.cn
 .mobilemsg.youku.com
 .mobondhrd.appspot.com
-.mobopay.baidu.com
 .mobwsa.ximalaya.com
 .mon.snssdk.com
 .mon.tiktokv.com
@@ -3573,7 +3422,6 @@
 .mum.alibabachengdun.com
 .mvads.kugou.com
 .mvchallenges.s3-website-eu-west-1.amazonaws.com
-.mvconf.f.360.cn
 .mvideo.xiaomi.com
 .mxpnl.com
 .myaccount.nytimes.com
@@ -3607,7 +3455,6 @@
 .nextdaymedia-ads.s3.amazonaws.com
 .nexus.officeapps.live.com
 .nexusrules.officeapps.live.com
-.nffdg43zx.appspot.com
 .nhtradecfg.eastmoney.com
 .ninja.akamaized.net
 .nitrous-analytics.s3.amazonaws.com
@@ -3626,9 +3473,7 @@
 .nsclick.baidu.com
 .nsclickvideo.baidu.com
 .nxet1.360doc.cn
-.o.isx.unity3d.com
 .o.lenovo.com
-.o209266.ingest.us.sentry.io
 .o2o.api.xiaomi.com
 .o9tt6h08li.execute-api.eu-west-1.amazonaws.com
 .oca.microsoft.com
@@ -3638,7 +3483,6 @@
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
 .ohm-dot-hackster-io.appspot.com
-.oi8ytfzxa.appspot.com
 .omappapi.com
 .omgid.qq.com
 .omgmta1.qq.com
@@ -3717,7 +3561,6 @@
 .pangolin.snssdk.com
 .paopao.iqiyi.com
 .papi.look.360.cn
-.par02p.wns.windows.com
 .parking.godaddy.com
 .parsely.com
 .partner.toutiao.com
@@ -3786,6 +3629,7 @@
 .player-telemetry.vimeo.com
 .plbusiness.samsung.com
 .pls.prd.mz.internal.unity3d.com
+.plugin.mobopay.baidu.com
 .pluto.sogou.com
 .plutonium.cointelegraph.com
 .pmir.3g.qq.com
@@ -3799,15 +3643,12 @@
 .popup.msn.com
 .port.sec.miui.com
 .pos.baidu.com
-.postmediamontrealgazette2.files.wordpress.com
 .pr.nss.netease.com
 .practivate.adobe.com
-.prd-lender.cdp.internal.unity3d.com
 .predataclient.b-cdn.net
 .preferences.premierleague.test.ajo.adobe.com
 .presence.teams.live.com
 .presentationtracking.netflix.com
-.preview.msn.com
 .privacy-center.org
 .privacy-policy.truste.com
 .projecta-common-1258344701.file.myqcloud.com
@@ -3946,7 +3787,6 @@
 .rmonitor.qq.com
 .robalmeister.workers.dev
 .roi.soulapp.cn
-.romeccs.microsoft.com
 .routertips.video.qq.com
 .rp.baidu.com
 .rp.hpplay.cn
@@ -3965,7 +3805,6 @@
 .rubiconproject.com
 .rum-metrics.bunny.net
 .rum.condenastdigital.com
-.ruw82qpzxas.appspot.com
 .s-adashx.ut.uc.cn
 .s.360.cn
 .s.baidu.com
@@ -4054,7 +3893,6 @@
 .sfp.safe.baidu.com
 .sfsafsadfjbbj-dsafjnb-1321533417.cos.ap-beijing.myqcloud.com
 .sg.a.stat.mi.com
-.sg2p.wns.windows.com
 .sgg.southcn.com
 .sh.apigw.tencentcs.com
 .shadu.baidu.com
@@ -4087,7 +3925,6 @@
 .slog.sina.com.cn
 .sm.toutiao.com
 .smartad.10010.com
-.smartlock.google.com
 .smetric.ads.microsoft.com
 .smetrics.accuweather.com
 .smetrics.afpjobs.amazon.com
@@ -4136,15 +3973,12 @@
 .splashqqlive.gtimg.com
 .spoor-api.ft.com
 .sprocket-ping.s3.amazonaws.com
-.spynet2.microsoft.com
-.spynetalt.microsoft.com
 .srd.simba.taobao.com
 .srtb.msn.com
 .srv.tunefindforfans.com
 .srvcs.tumblr.com
 .ss-mndsrv.b-cdn.net
 .ssc.voacantonese.com
-.ssdkauth.hpplay.cn
 .ssl-cdn.static.browser.mi-img.com
 .ssl-google-analytics.l.google.com
 .ssp.qq.com
@@ -4185,7 +4019,6 @@
 .static-s.iqiyi.com
 .static.addtoany.com
 .static.alimama.com
-.static.g.iqiyi.com
 .static.map.bdimg.com
 .static.narrativ.com
 .static.su.baidu.com
@@ -4294,7 +4127,6 @@
 .tempest.services.disqus.com
 .tempo-client-metric-prod.s3.amazonaws.com
 .tepshared.tep.test.ajo.adobe.com
-.teredo.ipv6.microsoft.com
 .terminallog-76327.gzc.vod.tencent-cloud.com
 .teslaamg.obs.cn-east-3.myhuaweicloud.com
 .test-landing-page-122122.email-disney.cjm.adobe.com
@@ -4311,7 +4143,6 @@
 .timon.zijieapi.com
 .tinglog.baidu.com
 .tiqcdn.com
-.tir94wepsdxox.appspot.com
 .tj.b.qq.com
 .tj.kugou.com
 .tj.video.qq.com
@@ -4357,9 +4188,7 @@
 .tpstelemetry.tencent.com
 .tpush.html5.qq.com
 .tr.www.cloudflare.com
-.tr54sdsazxas.appspot.com
 .trace.qq.com
-.trace.svc.ui.com
 .trace.zhiyan.tencent-cloud.net
 .tracelog.www.alibaba.com
 .track-dark-bz.b-cdn.net
@@ -4411,7 +4240,6 @@
 .trkgbm.business.hsbc.com.hk
 .trkhinv.business.hsbc.com.hk
 .trksvg.business.hsbc.com.hk
-.tru465rsda.appspot.com
 .tsearch.snssdk.com
 .tsyndicate.com
 .tttppp.oss-cn-guangzhou.aliyuncs.com
@@ -4498,7 +4326,6 @@
 .utp.ucweb.com
 .uu.qq.com
 .uvgxhu.ezgif.com
-.uy054eprsdoz.appspot.com
 .uz-analysis.akamaized.net
 .v.shopify.com
 .v9banners-com.cdn.ampproject.org
@@ -4541,7 +4368,6 @@
 .vv.video.qq.com
 .vwonwkaqvq-a.global.ssl.fastly.net
 .w.gdown.baidu.com
-.w.isx.unity3d.com
 .w.m.taobao.com
 .w2g-ping.b-cdn.net
 .w3-reporting-nel.reddit.com
@@ -4556,7 +4382,6 @@
 .wanproxy.127.net
 .wap3.ucweb.com
 .wapwbclick.mobile.sina.cn
-.watson.live.com
 .watson.microsoft.com
 .wax.weibo.com
 .wb.gtimg.com
@@ -4583,10 +4408,6 @@
 .whatif.uk.adobe.com
 .wheelioapp.azureedge.net
 .widget.weibo.com
-.win10.ipv6.microsoft.com
-.win1710.ipv6.microsoft.com
-.win8.ipv6.microsoft.com
-.windowsphishingalert158.s3.amazonaws.com
 .winonexd.b-cdn.net
 .wip3.adobe.com
 .wisepush.video.baidu.com
@@ -4622,7 +4443,6 @@
 .x.baidu.com
 .x.clearbit.com
 .x.weather.com
-.xasf32easzx.appspot.com
 .xc.mydrivers.com
 .xcf-bd-js.chuimg.com
 .xdcs-collector.ximalaya.com
@@ -4639,7 +4459,6 @@
 .xmaterial.tu.qq.com
 .xmpush.xiaomi.com
 .xne1ocient87zxz.360doc.cn
-.xoada0pzosa.appspot.com
 .xp2023-pix.s3.amazonaws.com
 .xpj08.oss-cn-beijing.aliyuncs.com
 .xpjcg.oss-accelerate.aliyuncs.com
@@ -4666,10 +4485,7 @@
 .yt-adp.nosdn.127.net
 .yt-adp.ws.126.net
 .yt.mmstat.com
-.ytuy45fxs.appspot.com
-.yu56tdfcxc.appspot.com
 .yuedu.iqiyi.com
-.yuhfdwesaa.appspot.com
 .yule.sohu.com
 .yun-hl.3g.qq.com
 .yunxinfw.com
@@ -4738,6 +4554,7 @@ api.e.kuaishou.com
 api.g.micloud.xiaomi.net
 api.hybrid.intl.xiaomi.com
 api.hybrid.xiaomi.com
+api.sec.intl.miui.com
 api.yuedu.iqiyi.com
 api2.e.kuaishou.com
 apiv4-iyes.youku.com
@@ -4760,6 +4577,7 @@ bs.l.qq.com
 c.id.mi.com
 c.l.qq.com
 c2.l.qq.com
+cache.datamart.windows.com
 cb.l.qq.com
 cdn-haokanapk.baidu.com
 cdn.exp.xiaomi.com
@@ -4914,6 +4732,7 @@ pre-ad.alimama.com
 pre-adv.alimama.com
 pre2-ad.alimama.com
 pre3-ad.alimama.com
+preview.msn.com
 prod.nexusrules.live.com
 proxy-mob-cld.alicdn.com
 prt-stsdk.vivo.com.cn
@@ -4929,6 +4748,7 @@ render-web.11222.cn
 report.qqweb.qq.com
 report.yumobi.cn
 resolver.mi.xiaomi.com
+romeccs.microsoft.com
 rprain.bz.mgtv.com
 saxs.sina.cn
 sdfp.snssdk.com
@@ -4942,8 +4762,11 @@ sltint.adv.ott.cibntv.net
 so.sina.cn
 soul-ad.soulapp.cn
 splashimgretrybssdl.cloud.kugou.com
+spynet2.microsoft.com
+spynetalt.microsoft.com
 stat.dns.sb
 stat.loli.net
+static.g.iqiyi.com
 static.mibi.xiaomi.com
 statis.api.3g.youku.com
 stats.xiaomi.com
@@ -4986,6 +4809,9 @@ vs.biz.weibo.com
 vstat.my.tv.sohu.com
 vv84.bj.bcebos.com
 w.l.qq.com
+watson.live.com
+win10.ipv6.microsoft.com
+win1710.ipv6.microsoft.com
 wmlog.meituan.com
 wpcdn1.herokuapp.com
 www-analytics.ripe.net
