--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,9 +1,10 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-07-24 09:08:12
-# Total rules: 4821
+# Generated from relevant_rules_wildcard_aware.txt on 2025-07-24 15:40:36
+# Total rules: 5016
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
 .1080872514.rsc.cdn77.org
+.1097834592.rsc.cdn77.org
 .1187531871.rsc.cdn77.org
 .119.29.196.104.bc.googleusercontent.com
 .1208344341.rsc.cdn77.org
@@ -21,10 +22,14 @@
 .1wincdn.b-cdn.net
 .2016.sina.cn
 .2052.flash2-http.qq.com
+.2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2mdn.net
 .2xbits.eu.org
+.3dns-1.adobe.com
 .3dns-2.adobe.com
 .3dns-3.adobe.com
+.3dns-4.adobe.com
+.3dns.adobe.com
 .3rd.t.sohu.com
 .3site-rss.s3-ap-northeast-1.amazonaws.com
 .51.la
@@ -86,6 +91,7 @@
 .ad.cyapi.cn
 .ad.dev.360.cn
 .ad.docer.wps.cn
+.ad.eporner.com
 .ad.gmw.cn
 .ad.hpplay.cn
 .ad.imp.joins.com
@@ -122,6 +128,7 @@
 .ad4.sina.com.cn
 .ad5.sina.com.cn
 .ada.baidu.com
+.adagiobanner.s3.amazonaws.com
 .adapi.foooooot.com
 .adash-c.m.taobao.com
 .adash-c.ut.taobao.com
@@ -342,6 +349,7 @@
 .aepxlg.adobe.com
 .afd.baidu.com
 .afd.l.google.com
+.affiliate.googleusercontent.com
 .affim.baidu.com
 .afp.alicdn.com
 .afp.iqiyi.com
@@ -463,6 +471,7 @@
 .api.miwifi.com
 .api.mp.uc.cn
 .api.newsfeed.intl.miui.com
+.api.optnmnstr.com
 .api.setting.intl.miui.com
 .api.sprig.com
 .api.stacksocial.com
@@ -596,6 +605,44 @@
 .biz.weibo.com
 .bj.bcebos.com
 .bldr.mkt.samsung.com
+.bn2wns1.wns.windows.com
+.bn3sch020010558.wns.windows.com
+.bn3sch020010560.wns.windows.com
+.bn3sch020010618.wns.windows.com
+.bn3sch020010629.wns.windows.com
+.bn3sch020010631.wns.windows.com
+.bn3sch020010635.wns.windows.com
+.bn3sch020010636.wns.windows.com
+.bn3sch020010650.wns.windows.com
+.bn3sch020011727.wns.windows.com
+.bn3sch020012850.wns.windows.com
+.bn3sch020020322.wns.windows.com
+.bn3sch020020749.wns.windows.com
+.bn3sch020022328.wns.windows.com
+.bn3sch020022335.wns.windows.com
+.bn3sch020022361.wns.windows.com
+.bn4sch101120814.wns.windows.com
+.bn4sch101120818.wns.windows.com
+.bn4sch101120911.wns.windows.com
+.bn4sch101120913.wns.windows.com
+.bn4sch101121019.wns.windows.com
+.bn4sch101121109.wns.windows.com
+.bn4sch101121118.wns.windows.com
+.bn4sch101121223.wns.windows.com
+.bn4sch101121407.wns.windows.com
+.bn4sch101121618.wns.windows.com
+.bn4sch101121704.wns.windows.com
+.bn4sch101121709.wns.windows.com
+.bn4sch101121714.wns.windows.com
+.bn4sch101121908.wns.windows.com
+.bn4sch101122117.wns.windows.com
+.bn4sch101122310.wns.windows.com
+.bn4sch101122312.wns.windows.com
+.bn4sch101122421.wns.windows.com
+.bn4sch101123108.wns.windows.com
+.bn4sch101123110.wns.windows.com
+.bn4sch101123202.wns.windows.com
+.bn4sch102110124.wns.windows.com
 .bobo.163.com
 .bobo.corp.163.com
 .bole.shangshufang.ksosoft.com
@@ -625,21 +672,56 @@
 .c-adash.m.taobao.com
 .c-nfa.jd.com
 .c.alimama.com
+.c.ar.msn.com
 .c.arstechnica.com
+.c.at.msn.com
 .c.baidu.com
+.c.be.msn.com
+.c.br.msn.com
+.c.ca.msn.com
+.c.cl.msn.com
+.c.de.msn.com
+.c.dk.msn.com
+.c.es.msn.com
+.c.fi.msn.com
+.c.fr.msn.com
 .c.gj.qq.com
+.c.gr.msn.com
+.c.hk.msn.com
+.c.id.msn.com
+.c.ie.msn.com
+.c.il.msn.com
+.c.in.msn.com
+.c.it.msn.com
+.c.jp.msn.com
+.c.latam.msn.com
 .c.live.com
 .c.mse.360.cn
 .c.msn.com
+.c.my.msn.com
 .c.newyorker.com
+.c.nl.msn.com
+.c.no.msn.com
+.c.ph.msn.com
+.c.prodigy.msn.com
+.c.pt.msn.com
+.c.ru.msn.com
 .c.sayhi.360.cn
+.c.se.msn.com
+.c.sg.msn.com
+.c.th.msn.com
+.c.tr.msn.com
+.c.tw.msn.com
 .c.uaa.iqiyi.com
+.c.uk.msn.com
 .c.wired.com
 .c.yes.youku.com
+.c.za.msn.com
 .c00.adobe.com
 .c0nt4ct-me.pages.dev
 .c1-stats.shopifysvc.com
 .c783.fastcompany.com
+.cache.datamart.windows.com
 .caclick.baidu.com
 .cad.youku.com
 .calopenupdate.comm.miui.com
@@ -733,6 +815,7 @@
 .cms.tanx.com
 .cms.ucweb.com
 .cmshow.gtimg.cn
+.cmweb.ilike.alibaba.com
 .cn-vmc-images.alicdn.com
 .cn.vercount.one
 .cnzz.com
@@ -2259,6 +2342,7 @@
 .demkc32bq01ah.cloudfront.net
 .demo.emaillpb.adobe.com
 .demoamericas275.adobe.com
+.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .dev-push.m.youku.com
 .dev.email-signify.cjm.adobe.com
@@ -2473,6 +2557,7 @@
 .dqd5t8xfxmhi7.cloudfront.net
 .dqif5bl25s0bf.cloudfront.net
 .dqv45r33u0ltv.cloudfront.net
+.dr.soso.com
 .dr3k6qonw2kee.cloudfront.net
 .dr6su5ow3i7eo.cloudfront.net
 .dr6vcclmzwk74.cloudfront.net
@@ -2619,6 +2704,7 @@
 .ecommstats.s3.amazonaws.com
 .ecpm.tanx.com
 .edge.adobedc.net
+.edgecast-vod.yimg.com
 .edigitalsurvey.com
 .edith-seb.xiaohongshu.com
 .eduad.baidu.com
@@ -2904,6 +2990,81 @@
 .hits.theguardian.com
 .hjkhxfh.360doc.cn
 .hk.napi.ucweb.com
+.hk2.wns.windows.com
+.hk2sch130020721.wns.windows.com
+.hk2sch130020723.wns.windows.com
+.hk2sch130020726.wns.windows.com
+.hk2sch130020729.wns.windows.com
+.hk2sch130020732.wns.windows.com
+.hk2sch130020824.wns.windows.com
+.hk2sch130020843.wns.windows.com
+.hk2sch130020851.wns.windows.com
+.hk2sch130020854.wns.windows.com
+.hk2sch130020855.wns.windows.com
+.hk2sch130020924.wns.windows.com
+.hk2sch130020936.wns.windows.com
+.hk2sch130020940.wns.windows.com
+.hk2sch130020956.wns.windows.com
+.hk2sch130020958.wns.windows.com
+.hk2sch130020961.wns.windows.com
+.hk2sch130021017.wns.windows.com
+.hk2sch130021029.wns.windows.com
+.hk2sch130021035.wns.windows.com
+.hk2sch130021137.wns.windows.com
+.hk2sch130021142.wns.windows.com
+.hk2sch130021153.wns.windows.com
+.hk2sch130021217.wns.windows.com
+.hk2sch130021246.wns.windows.com
+.hk2sch130021249.wns.windows.com
+.hk2sch130021260.wns.windows.com
+.hk2sch130021264.wns.windows.com
+.hk2sch130021322.wns.windows.com
+.hk2sch130021323.wns.windows.com
+.hk2sch130021329.wns.windows.com
+.hk2sch130021334.wns.windows.com
+.hk2sch130021360.wns.windows.com
+.hk2sch130021432.wns.windows.com
+.hk2sch130021433.wns.windows.com
+.hk2sch130021435.wns.windows.com
+.hk2sch130021437.wns.windows.com
+.hk2sch130021440.wns.windows.com
+.hk2sch130021450.wns.windows.com
+.hk2sch130021518.wns.windows.com
+.hk2sch130021523.wns.windows.com
+.hk2sch130021526.wns.windows.com
+.hk2sch130021527.wns.windows.com
+.hk2sch130021544.wns.windows.com
+.hk2sch130021554.wns.windows.com
+.hk2sch130021618.wns.windows.com
+.hk2sch130021634.wns.windows.com
+.hk2sch130021638.wns.windows.com
+.hk2sch130021646.wns.windows.com
+.hk2sch130021652.wns.windows.com
+.hk2sch130021654.wns.windows.com
+.hk2sch130021657.wns.windows.com
+.hk2sch130021723.wns.windows.com
+.hk2sch130021726.wns.windows.com
+.hk2sch130021727.wns.windows.com
+.hk2sch130021730.wns.windows.com
+.hk2sch130021731.wns.windows.com
+.hk2sch130021754.wns.windows.com
+.hk2sch130021829.wns.windows.com
+.hk2sch130021830.wns.windows.com
+.hk2sch130021833.wns.windows.com
+.hk2sch130021840.wns.windows.com
+.hk2sch130021842.wns.windows.com
+.hk2sch130021851.wns.windows.com
+.hk2sch130021852.wns.windows.com
+.hk2sch130021927.wns.windows.com
+.hk2sch130021928.wns.windows.com
+.hk2sch130021929.wns.windows.com
+.hk2sch130021958.wns.windows.com
+.hk2sch130022035.wns.windows.com
+.hk2sch130022041.wns.windows.com
+.hk2sch130022049.wns.windows.com
+.hk2sch130022135.wns.windows.com
+.hk2wns1.wns.windows.com
+.hk2wns1b.wns.windows.com
 .hkrpg-log-upload.mihoyo.com
 .hl2rcv.adobe.com
 .hlrcv.stage.adobe.com
@@ -2987,6 +3148,7 @@
 .idm.bce.baidu.com
 .iebar.baidu.com
 .ieonline.microsoft.com
+.ieonlinews.microsoft.com
 .ietheivaicai.com
 .if.mingxing.qq.com
 .ifacelog.iqiyi.com
@@ -3022,6 +3184,7 @@
 .imdns.hpplay.cn
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
+.img.alibaba.com
 .img.gou.wpscdn.cn
 .img.response.digicert.com
 .img1.126.net
@@ -3037,6 +3200,7 @@
 .improving.duckduckgo.com
 .imtt.qq.com
 .in.applicationinsights.azure.com
+.in.yimg.com
 .indexww.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
@@ -3079,6 +3243,7 @@
 .itsdata.map.baidu.com
 .ivy.pconline.com.cn
 .iwallet-1258175138.file.myqcloud.com
+.iwan-s.video.qq.com
 .iwan.sogou.com
 .iwanad.baidu.com
 .iyes.youku.com
@@ -3112,6 +3277,7 @@
 .jswebcollects.kugou.com
 .juggler.services.disqus.com
 .jun01.oss-cn-beijing.aliyuncs.com
+.jzclick.soso.com
 .jzt.jd.com
 .k.qwant.com
 .kalstats.kaltura.com
@@ -3326,6 +3492,7 @@
 .metrics.mzstatic.com
 .metrics.npr.org
 .metrics.proquest.com
+.metrics.theatlantic.com
 .metrics.zacks.com
 .mg.games.sina.com.cn
 .mgtv-bbqn.oss-cn-beijing.aliyuncs.com
@@ -3359,6 +3526,7 @@
 .mixpanel.com
 .mj-snowplow-static-js.s3.amazonaws.com
 .mjca-yijws.global.ssl.fastly.net
+.ml314.com
 .mm1.365dmp.com
 .mmgame.qpic.cn
 .mnaspm.com
@@ -3376,6 +3544,7 @@
 .mobileads.google.com
 .mobileads.msn.com
 .mobileanalytics.us-east-1.amazonaws.com
+.mobileleads.msn.com
 .mobilelog.kugou.com
 .mobilem.360.cn
 .mobilemsg.youku.com
@@ -3473,16 +3642,19 @@
 .nsclick.baidu.com
 .nsclickvideo.baidu.com
 .nxet1.360doc.cn
+.nytadvertising.nytimes.com
 .o.lenovo.com
 .o2o.api.xiaomi.com
 .o9tt6h08li.execute-api.eu-west-1.amazonaws.com
 .oca.microsoft.com
 .oceanengine.com
 .odc.weather.com
+.offer.alibaba.com
 .offnavi.map.baidu.com
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
 .ohm-dot-hackster-io.appspot.com
+.oimsgad.qq.com
 .omappapi.com
 .omgid.qq.com
 .omgmta1.qq.com
@@ -3561,6 +3733,7 @@
 .pangolin.snssdk.com
 .paopao.iqiyi.com
 .papi.look.360.cn
+.par02p.wns.windows.com
 .parking.godaddy.com
 .parsely.com
 .partner.toutiao.com
@@ -3603,6 +3776,8 @@
 .pindao.huoban.taobao.com
 .ping.acc.sogou.com
 .pingback.sogou.com
+.pingfore.qq.com
+.pingfore.soso.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pingma.qq.com
@@ -3649,6 +3824,8 @@
 .preferences.premierleague.test.ajo.adobe.com
 .presence.teams.live.com
 .presentationtracking.netflix.com
+.preview.msn.com
+.prexyone.appspot.com
 .privacy-center.org
 .privacy-policy.truste.com
 .projecta-common-1258344701.file.myqcloud.com
@@ -3710,8 +3887,10 @@
 .qpb0.sohu.com
 .qpb1.sohu.com
 .qqdata.ab.qq.com
+.qqlogo.qq.com
 .qqshow2-item.qq.com
 .qreport.qunar.com
+.qring-tms.qq.com
 .qrl.existence.pp.ua
 .qss-client.qq.com
 .qubitanalytics.appspot.com
@@ -3735,9 +3914,12 @@
 .rad.microsoft.com
 .rad.msn.com
 .rads.msn.com
+.rads.stackoverflow.com
+.rapid-glade-cde8.asoumare042024.workers.dev
 .rating6.kingsoft-office-service.com
 .raw.vidyard.com
 .rcgi.video.qq.com
+.rcm-images.amazon.com
 .rd.e.sogou.com
 .rdstat.tanx.com
 .re.m.taobao.com
@@ -3775,6 +3957,7 @@
 .rh.qq.com
 .rich.qq.com
 .richmedia.video.qq.com
+.richmedia.yimg.com
 .riqhisfus.com
 .risk.clearbit.com
 .river.zhidao.baidu.com
@@ -3787,6 +3970,7 @@
 .rmonitor.qq.com
 .robalmeister.workers.dev
 .roi.soulapp.cn
+.romeccs.microsoft.com
 .routertips.video.qq.com
 .rp.baidu.com
 .rp.hpplay.cn
@@ -3813,6 +3997,7 @@
 .s.gxv.test.ajo.adobe.com
 .s.img.mix.sina.com.cn
 .s.lenovo.com
+.s.skimresources.com
 .s.so.360.cn
 .sa.api.intl.miui.com
 .sa.bbc.co.uk
@@ -3893,6 +4078,7 @@
 .sfp.safe.baidu.com
 .sfsafsadfjbbj-dsafjnb-1321533417.cos.ap-beijing.myqcloud.com
 .sg.a.stat.mi.com
+.sg2p.wns.windows.com
 .sgg.southcn.com
 .sh.apigw.tencentcs.com
 .shadu.baidu.com
@@ -3903,6 +4089,7 @@
 .shooter.m.jd.com
 .shouji.360.cn
 .shouji.sogou.com
+.show-msgch.qq.com
 .show.look.360.cn
 .showwxml.qq.com
 .shuaji.360.cn
@@ -3973,6 +4160,8 @@
 .splashqqlive.gtimg.com
 .spoor-api.ft.com
 .sprocket-ping.s3.amazonaws.com
+.spynet2.microsoft.com
+.spynetalt.microsoft.com
 .srd.simba.taobao.com
 .srtb.msn.com
 .srv.tunefindforfans.com
@@ -4019,6 +4208,7 @@
 .static-s.iqiyi.com
 .static.addtoany.com
 .static.alimama.com
+.static.g.iqiyi.com
 .static.map.bdimg.com
 .static.narrativ.com
 .static.su.baidu.com
@@ -4031,6 +4221,7 @@
 .stats.adobe.com
 .stats.bbc.co.uk
 .stats.blogger.com
+.stats.fastcompany.com
 .stats.kaltura.com
 .stats.miui.com
 .stats.nymag.com
@@ -4066,6 +4257,7 @@
 .sugs.m.sm.cn
 .sunlightmetrics.b-cdn.net
 .supportmetrics.apple.com
+.survey.china.alibaba.com
 .susapi.lenovomm.com
 .suvset.sohu.com
 .svibeacon.onezapp.com
@@ -4127,6 +4319,7 @@
 .tempest.services.disqus.com
 .tempo-client-metric-prod.s3.amazonaws.com
 .tepshared.tep.test.ajo.adobe.com
+.teredo.ipv6.microsoft.com
 .terminallog-76327.gzc.vod.tencent-cloud.com
 .teslaamg.obs.cn-east-3.myhuaweicloud.com
 .test-landing-page-122122.email-disney.cjm.adobe.com
@@ -4143,6 +4336,7 @@
 .timon.zijieapi.com
 .tinglog.baidu.com
 .tiqcdn.com
+.titkoshirek.wordpress.com
 .tj.b.qq.com
 .tj.kugou.com
 .tj.video.qq.com
@@ -4179,6 +4373,7 @@
 .tongji.baidu.com
 .toolbar.baidu.com
 .toolbar.msn.com
+.toolbar.soso.com
 .tools.3g.qq.com
 .top.h.qhimg.com
 .toruk.tanx.com
@@ -4266,6 +4461,7 @@
 .udc.msn.com
 .udd1i5.zhihu.com
 .udpolimenew.baidu.com
+.uedata.amazon.com
 .ufosdk.baidu.com
 .ug.snssdk.com
 .uid.ksosoft.com
@@ -4295,7 +4491,9 @@
 .union.ucweb.com
 .unionimage.baidu.com
 .unitacs.m.taobao.com
+.unityads.unity.cn
 .unityads.unity3d.com
+.unstat.baidu.com
 .up-hl.3g.qq.com
 .up1.tj.u2.ucweb.com
 .up4.ucweb.com
@@ -4358,6 +4556,7 @@
 .visualscience.external.bbc.co.uk
 .vkcdnservice.appspot.com
 .vlive.qqvideo.tc.qq.com
+.voduscdn.azureedge.net
 .volcsiriusbd.com
 .vpic.video.qq.com
 .vs19.gzcu.u3.ucweb.com
@@ -4382,6 +4581,7 @@
 .wanproxy.127.net
 .wap3.ucweb.com
 .wapwbclick.mobile.sina.cn
+.watson.live.com
 .watson.microsoft.com
 .wax.weibo.com
 .wb.gtimg.com
@@ -4408,6 +4608,9 @@
 .whatif.uk.adobe.com
 .wheelioapp.azureedge.net
 .widget.weibo.com
+.win10.ipv6.microsoft.com
+.win1710.ipv6.microsoft.com
+.win8.ipv6.microsoft.com
 .winonexd.b-cdn.net
 .wip3.adobe.com
 .wisepush.video.baidu.com
@@ -4433,6 +4636,8 @@
 .wwis-dubc1-vip60.adobe.com
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
+.www.addtoany.com
+.www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .www7.springer.com
 .wxaintpcos.wxqcloud.qq.com.cn
@@ -4480,6 +4685,7 @@
 .ykrectab.youku.com
 .ynuf.aliapp.org
 .yoo.gtimg.com
+.youborafds01.com
 .youku-acs.m.taobao.com
 .ys2000.cdn.bcebos.com
 .yt-adp.nosdn.127.net
@@ -4577,7 +4783,6 @@ bs.l.qq.com
 c.id.mi.com
 c.l.qq.com
 c2.l.qq.com
-cache.datamart.windows.com
 cb.l.qq.com
 cdn-haokanapk.baidu.com
 cdn.exp.xiaomi.com
@@ -4610,7 +4815,6 @@ dns.wechat.com
 download.wan.sohu.com
 dr.netease.im
 du.163.com
-edgecast-vod.yimg.com
 encounter.bz.mgtv.com
 err.taobao.com
 events-analytics.apple.com
@@ -4732,13 +4936,11 @@ pre-ad.alimama.com
 pre-adv.alimama.com
 pre2-ad.alimama.com
 pre3-ad.alimama.com
-preview.msn.com
 prod.nexusrules.live.com
 proxy-mob-cld.alicdn.com
 prt-stsdk.vivo.com.cn
 qgnu18wo.sina.cn
 qiye.xiaomi.com
-qring-tms.qq.com
 quickaplus-server-api-cn-zhangjiakou.aliyuncs.com
 r.dmp.sina.cn
 r.dmp.sina.com.cn
@@ -4748,7 +4950,6 @@ render-web.11222.cn
 report.qqweb.qq.com
 report.yumobi.cn
 resolver.mi.xiaomi.com
-romeccs.microsoft.com
 rprain.bz.mgtv.com
 saxs.sina.cn
 sdfp.snssdk.com
@@ -4762,11 +4963,8 @@ sltint.adv.ott.cibntv.net
 so.sina.cn
 soul-ad.soulapp.cn
 splashimgretrybssdl.cloud.kugou.com
-spynet2.microsoft.com
-spynetalt.microsoft.com
 stat.dns.sb
 stat.loli.net
-static.g.iqiyi.com
 static.mibi.xiaomi.com
 statis.api.3g.youku.com
 stats.xiaomi.com
@@ -4809,9 +5007,6 @@ vs.biz.weibo.com
 vstat.my.tv.sohu.com
 vv84.bj.bcebos.com
 w.l.qq.com
-watson.live.com
-win10.ipv6.microsoft.com
-win1710.ipv6.microsoft.com
 wmlog.meituan.com
 wpcdn1.herokuapp.com
 www-analytics.ripe.net
