--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,10 +1,9 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-07-24 15:40:36
-# Total rules: 5016
+# Generated from relevant_rules_wildcard_aware.txt on 2025-07-25 09:41:51
+# Total rules: 4996
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
 .1080872514.rsc.cdn77.org
-.1097834592.rsc.cdn77.org
 .1187531871.rsc.cdn77.org
 .119.29.196.104.bc.googleusercontent.com
 .1208344341.rsc.cdn77.org
@@ -13,6 +12,7 @@
 .12551-1311572332.cos.ap-shanghai.myqcloud.com
 .1437953666.rsc.cdn77.org
 .1480876790.rsc.cdn77.org
+.1493361689.rsc.cdn77.org
 .1529462937.rsc.cdn77.org
 .1548164934.rsc.cdn77.org
 .1558334541.rsc.cdn77.org
@@ -22,14 +22,10 @@
 .1wincdn.b-cdn.net
 .2016.sina.cn
 .2052.flash2-http.qq.com
-.2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2mdn.net
 .2xbits.eu.org
-.3dns-1.adobe.com
 .3dns-2.adobe.com
 .3dns-3.adobe.com
-.3dns-4.adobe.com
-.3dns.adobe.com
 .3rd.t.sohu.com
 .3site-rss.s3-ap-northeast-1.amazonaws.com
 .51.la
@@ -53,6 +49,7 @@
 .a1.api.bbc.co.uk
 .a1.api.bbc.com
 .a1.itc.cn
+.a125375509.cdn.optimizely.com
 .a8bea9eb5d.com
 .a8clk.macpaw.com
 .aa.zdnet.com
@@ -77,6 +74,7 @@
 .activity.browser.intl.miui.com
 .acttg.eastmoney.com
 .ad-1258444056.cos.accelerate.myqcloud.com
+.ad-assets.futurecdn.net
 .ad-creatives-public.commondatastorage.googleapis.com
 .ad-log-upload.mihoyo.com
 .ad-serve.b-cdn.net
@@ -91,7 +89,6 @@
 .ad.cyapi.cn
 .ad.dev.360.cn
 .ad.docer.wps.cn
-.ad.eporner.com
 .ad.gmw.cn
 .ad.hpplay.cn
 .ad.imp.joins.com
@@ -128,7 +125,6 @@
 .ad4.sina.com.cn
 .ad5.sina.com.cn
 .ada.baidu.com
-.adagiobanner.s3.amazonaws.com
 .adapi.foooooot.com
 .adash-c.m.taobao.com
 .adash-c.ut.taobao.com
@@ -219,7 +215,6 @@
 .ads-marketing-vivofs.vivo.com.cn
 .ads-privacy-api.prd.mz.internal.unity3d.com
 .ads-sg.tiktok.com
-.ads-static.conde.digital
 .ads-thanhnien-vn.cdn.ampproject.org
 .ads-union.jd.com
 .ads-video-al.xhscdn.com
@@ -295,6 +290,7 @@
 .adsmind.gdtimg.com
 .adsmind.tc.qq.com
 .adsninja.b-cdn.net
+.adsninjacdn.b-cdn.net
 .adsqqclick.qq.com
 .adsrich.qq.com
 .adsrvr.org
@@ -349,7 +345,6 @@
 .aepxlg.adobe.com
 .afd.baidu.com
 .afd.l.google.com
-.affiliate.googleusercontent.com
 .affim.baidu.com
 .afp.alicdn.com
 .afp.iqiyi.com
@@ -390,6 +385,7 @@
 .amfi.gou.sogou.com
 .amp-error-reporting.appspot.com
 .amplitude.com
+.ampmetrics.engadget.com
 .amptrack-dailymail-co-uk.cdn.ampproject.org
 .ams-pageview-public.s3.amazonaws.com
 .an.facebook.com
@@ -397,6 +393,7 @@
 .analytics-alv.google.com
 .analytics-consent-manager-v2-prod.azureedge.net
 .analytics-consent-manager.azureedge.net
+.analytics-digit-in.cdn.ampproject.org
 .analytics-events.apple.com
 .analytics-prod-alb-292764149.us-west-2.elb.amazonaws.com
 .analytics-sg.tiktok.com
@@ -471,7 +468,7 @@
 .api.miwifi.com
 .api.mp.uc.cn
 .api.newsfeed.intl.miui.com
-.api.optnmnstr.com
+.api.sec.intl.miui.com
 .api.setting.intl.miui.com
 .api.sprig.com
 .api.stacksocial.com
@@ -521,8 +518,10 @@
 .as.baidu.com
 .as.mgtv.com
 .as1.wenku.baidu.com
+.as54rdxfzxs.appspot.com
 .ascpqnj-oam.global.ssl.fastly.net
 .asearch.alicdn.com
+.asgh65tfsdxz.appspot.com
 .asia-northeast1-affiliate-pr.cloudfunctions.net
 .assp.sohu.com
 .atanx.alicdn.com
@@ -672,51 +671,17 @@
 .c-adash.m.taobao.com
 .c-nfa.jd.com
 .c.alimama.com
-.c.ar.msn.com
 .c.arstechnica.com
-.c.at.msn.com
 .c.baidu.com
-.c.be.msn.com
-.c.br.msn.com
-.c.ca.msn.com
-.c.cl.msn.com
-.c.de.msn.com
-.c.dk.msn.com
-.c.es.msn.com
-.c.fi.msn.com
-.c.fr.msn.com
 .c.gj.qq.com
-.c.gr.msn.com
-.c.hk.msn.com
-.c.id.msn.com
-.c.ie.msn.com
-.c.il.msn.com
-.c.in.msn.com
-.c.it.msn.com
-.c.jp.msn.com
-.c.latam.msn.com
 .c.live.com
 .c.mse.360.cn
 .c.msn.com
-.c.my.msn.com
 .c.newyorker.com
-.c.nl.msn.com
-.c.no.msn.com
-.c.ph.msn.com
-.c.prodigy.msn.com
-.c.pt.msn.com
-.c.ru.msn.com
 .c.sayhi.360.cn
-.c.se.msn.com
-.c.sg.msn.com
-.c.th.msn.com
-.c.tr.msn.com
-.c.tw.msn.com
 .c.uaa.iqiyi.com
-.c.uk.msn.com
 .c.wired.com
 .c.yes.youku.com
-.c.za.msn.com
 .c00.adobe.com
 .c0nt4ct-me.pages.dev
 .c1-stats.shopifysvc.com
@@ -730,6 +695,7 @@
 .cams.xvideos.com
 .capture.condenastdigital.com
 .carbonads.com
+.care.help.360.cn
 .carpe.pages.dev
 .cars.toutiao.com
 .caspionlog.appspot.com
@@ -748,6 +714,7 @@
 .cdn-bongdadem-net.cdn.ampproject.org
 .cdn-ketchapp.akamaized.net
 .cdn.ark.qq.com
+.cdn.cookielaw.org
 .cdn.onesignal.com
 .cdn.tanx.com
 .cdnweb3.pages.dev
@@ -815,7 +782,6 @@
 .cms.tanx.com
 .cms.ucweb.com
 .cmshow.gtimg.cn
-.cmweb.ilike.alibaba.com
 .cn-vmc-images.alicdn.com
 .cn.vercount.one
 .cnzz.com
@@ -838,6 +804,7 @@
 .community.fandom.com
 .concert.io
 .concertads-configs.vox-cdn.com
+.conde.digital
 .conf.hpplay.cn
 .conf.international.baidu.com
 .conf.wifi.360.cn
@@ -906,6 +873,8 @@
 .cstm.baidu.com
 .ctobsnssdk.com
 .ctr.hd.sohu.com
+.cu-cn-north00001.gala.convection.cn
+.cu-cn-north00002.gala.convection.cn
 .customerevents.dradis.netflix.com
 .customerevents.netflix.com
 .cxense.com
@@ -2189,6 +2158,7 @@
 .d9yk47of1efyy.cloudfront.net
 .da.mgtv.com
 .da.netease.com
+.da032opzasz.appspot.com
 .da26k71rxh0kb.cloudfront.net
 .da327va27j0hh.cloudfront.net
 .da3uf5ucdz00u.cloudfront.net
@@ -2342,7 +2312,6 @@
 .demkc32bq01ah.cloudfront.net
 .demo.emaillpb.adobe.com
 .demoamericas275.adobe.com
-.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .dev-push.m.youku.com
 .dev.email-signify.cjm.adobe.com
@@ -2378,6 +2347,7 @@
 .dgpp7fq3iorb.cloudfront.net
 .dgw7ae5vrovs7.cloudfront.net
 .dgyrizngtcfck.cloudfront.net
+.dgyu536ds.appspot.com
 .dh0c1bz67fuho.cloudfront.net
 .dh0uktvqfaomb.cloudfront.net
 .dh6dm31izb875.cloudfront.net
@@ -2392,6 +2362,7 @@
 .diagnostics.support.microsoft.com
 .dianying-1304791696.cos.ap-shanghai.myqcloud.com
 .dic9vgwbkxd8r.cloudfront.net
+.didna.b-cdn.net
 .dig.bdurl.net
 .dig.lianjia.com
 .digital-ads.s3.amazonaws.com
@@ -2557,7 +2528,6 @@
 .dqd5t8xfxmhi7.cloudfront.net
 .dqif5bl25s0bf.cloudfront.net
 .dqv45r33u0ltv.cloudfront.net
-.dr.soso.com
 .dr3k6qonw2kee.cloudfront.net
 .dr6su5ow3i7eo.cloudfront.net
 .dr6vcclmzwk74.cloudfront.net
@@ -2704,7 +2674,6 @@
 .ecommstats.s3.amazonaws.com
 .ecpm.tanx.com
 .edge.adobedc.net
-.edgecast-vod.yimg.com
 .edigitalsurvey.com
 .edith-seb.xiaohongshu.com
 .eduad.baidu.com
@@ -2730,6 +2699,7 @@
 .entry.baidu.com
 .epro.sogou.com
 .epro.sohu.com
+.eqit9pzsxz.appspot.com
 .erebor.douban.com
 .ereg.adobe.com
 .error-analytics-sessions-production.shopifysvc.com
@@ -2795,6 +2765,7 @@
 .feed-image.baidu.com
 .feed.baidu.com
 .feedback-c.zijieapi.com
+.feedback.uc.cn
 .fengkongcloud.com
 .fexclick.baidu.com
 .ffbbbdc6d3c353211fe2ba39c9f744cd.com
@@ -2881,6 +2852,7 @@
 .gb.corp.163.com
 .gc.sec.miui.com
 .gcapi.sy.kugou.com
+.gdh4szx.appspot.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gecko.snssdk.com
@@ -2911,7 +2883,6 @@
 .gld.samsungosp.com
 .glitter.services.disqus.com
 .global-staticplat.cdn.bcebos.com
-.globalservices.conde.digital
 .gma.alicdn.com
 .gn-flagpoles.api.bbci.co.uk
 .go-mpulse.net
@@ -2985,9 +2956,11 @@
 .heoads.b-cdn.net
 .hesads.akamaized.net
 .hg-statsd.setapp.com
+.hg76ytsdas.appspot.com
 .hijack.baidu.com
 .hilton.data.adobedc.net
 .hits.theguardian.com
+.hj67fadszx.appspot.com
 .hjkhxfh.360doc.cn
 .hk.napi.ucweb.com
 .hk2.wns.windows.com
@@ -3065,7 +3038,9 @@
 .hk2sch130022135.wns.windows.com
 .hk2wns1.wns.windows.com
 .hk2wns1b.wns.windows.com
+.hk567rsda.appspot.com
 .hkrpg-log-upload.mihoyo.com
+.hksdf924pzxoias.appspot.com
 .hl2rcv.adobe.com
 .hlrcv.stage.adobe.com
 .hm.baidu.com
@@ -3184,7 +3159,6 @@
 .imdns.hpplay.cn
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
-.img.alibaba.com
 .img.gou.wpscdn.cn
 .img.response.digicert.com
 .img1.126.net
@@ -3200,7 +3174,6 @@
 .improving.duckduckgo.com
 .imtt.qq.com
 .in.applicationinsights.azure.com
-.in.yimg.com
 .indexww.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
@@ -3216,6 +3189,7 @@
 .install2.kugou.com
 .installer.xiaomi.com
 .instant-e-app-for-campaign.github.io
+.instory-log.ucnews.ucweb.com
 .int.dpool.sina.com.cn
 .intake-analytics.wikimedia.org
 .intake-logging.wikimedia.org
@@ -3246,6 +3220,7 @@
 .iwan-s.video.qq.com
 .iwan.sogou.com
 .iwanad.baidu.com
+.iwe8pzosa.appspot.com
 .iyes.youku.com
 .j.br.baidu.com
 .j.wit.qq.com
@@ -3277,20 +3252,24 @@
 .jswebcollects.kugou.com
 .juggler.services.disqus.com
 .jun01.oss-cn-beijing.aliyuncs.com
-.jzclick.soso.com
 .jzt.jd.com
 .k.qwant.com
+.k87yfgsdaa.appspot.com
 .kalstats.kaltura.com
 .kcqoej.roborock.com
 .kde.qq.com
 .kepler.jd.com
+.kga9szxosa.appspot.com
 .kgipadstat.kugou.com
 .kgipadstatbak.kugou.com
 .kgmobilestat.kugou.com
 .kgmobilestatbak.kugou.com
 .kinesis.eu-west-1.amazonaws.com
+.kj65rdasz.appspot.com
+.kj6787rsd.appspot.com
 .kmmgoogle.oss-ap-southeast-1.aliyuncs.com
 .knicks.jd.com
+.kr9apzxosa.appspot.com
 .kstj.baidu.com
 .kuiniuca.com
 .kwurl.ucweb.com
@@ -3389,6 +3368,7 @@
 .logstat.kugou.com
 .logtake.weidian.com
 .logtj.kugou.com
+.logu.hpplay.cn
 .logwebs.kugou.com
 .logx-experimentation.iherb.com
 .logx.optimizely.com
@@ -3440,6 +3420,7 @@
 .mail-ads.google.com
 .mail-cytanet.pages.dev
 .mailmunch.s3.amazonaws.com
+.mailsupport-24f7f1500ed129bc71f2ad9c06fe1e73.pages.dev
 .mapi.m.jd.com
 .mapp.qzone.qq.com
 .market-fin.meituan.com
@@ -3449,6 +3430,7 @@
 .marketing.alibaba.com
 .marketing.dropbox.com
 .marketing.mangacopy.com
+.marketingplatform.google.com
 .martech.condenastdigital.com
 .masdk.3g.qq.com
 .masdkv6.3g.qq.com
@@ -3463,6 +3445,7 @@
 .mcdn.bilivideo.cn
 .mcdn.bilivideo.com
 .mcgi.v.qq.com
+.mclean.f.360.cn
 .mclick.simba.taobao.com
 .mcs-sg.tiktok.com
 .mcs-va-useast2a.tiktokv.com
@@ -3492,7 +3475,6 @@
 .metrics.mzstatic.com
 .metrics.npr.org
 .metrics.proquest.com
-.metrics.theatlantic.com
 .metrics.zacks.com
 .mg.games.sina.com.cn
 .mgtv-bbqn.oss-cn-beijing.aliyuncs.com
@@ -3544,7 +3526,6 @@
 .mobileads.google.com
 .mobileads.msn.com
 .mobileanalytics.us-east-1.amazonaws.com
-.mobileleads.msn.com
 .mobilelog.kugou.com
 .mobilem.360.cn
 .mobilemsg.youku.com
@@ -3591,6 +3572,7 @@
 .mum.alibabachengdun.com
 .mvads.kugou.com
 .mvchallenges.s3-website-eu-west-1.amazonaws.com
+.mvconf.f.360.cn
 .mvideo.xiaomi.com
 .mxpnl.com
 .myaccount.nytimes.com
@@ -3624,6 +3606,7 @@
 .nextdaymedia-ads.s3.amazonaws.com
 .nexus.officeapps.live.com
 .nexusrules.officeapps.live.com
+.nffdg43zx.appspot.com
 .nhtradecfg.eastmoney.com
 .ninja.akamaized.net
 .nitrous-analytics.s3.amazonaws.com
@@ -3642,19 +3625,19 @@
 .nsclick.baidu.com
 .nsclickvideo.baidu.com
 .nxet1.360doc.cn
-.nytadvertising.nytimes.com
+.o.isx.unity3d.com
 .o.lenovo.com
+.o209266.ingest.us.sentry.io
 .o2o.api.xiaomi.com
 .o9tt6h08li.execute-api.eu-west-1.amazonaws.com
 .oca.microsoft.com
 .oceanengine.com
 .odc.weather.com
-.offer.alibaba.com
 .offnavi.map.baidu.com
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
 .ohm-dot-hackster-io.appspot.com
-.oimsgad.qq.com
+.oi8ytfzxa.appspot.com
 .omappapi.com
 .omgid.qq.com
 .omgmta1.qq.com
@@ -3776,8 +3759,6 @@
 .pindao.huoban.taobao.com
 .ping.acc.sogou.com
 .pingback.sogou.com
-.pingfore.qq.com
-.pingfore.soso.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pingma.qq.com
@@ -3818,14 +3799,15 @@
 .popup.msn.com
 .port.sec.miui.com
 .pos.baidu.com
+.postmediamontrealgazette2.files.wordpress.com
 .pr.nss.netease.com
 .practivate.adobe.com
+.prd-lender.cdp.internal.unity3d.com
 .predataclient.b-cdn.net
 .preferences.premierleague.test.ajo.adobe.com
 .presence.teams.live.com
 .presentationtracking.netflix.com
 .preview.msn.com
-.prexyone.appspot.com
 .privacy-center.org
 .privacy-policy.truste.com
 .projecta-common-1258344701.file.myqcloud.com
@@ -3887,10 +3869,8 @@
 .qpb0.sohu.com
 .qpb1.sohu.com
 .qqdata.ab.qq.com
-.qqlogo.qq.com
 .qqshow2-item.qq.com
 .qreport.qunar.com
-.qring-tms.qq.com
 .qrl.existence.pp.ua
 .qss-client.qq.com
 .qubitanalytics.appspot.com
@@ -3914,12 +3894,9 @@
 .rad.microsoft.com
 .rad.msn.com
 .rads.msn.com
-.rads.stackoverflow.com
-.rapid-glade-cde8.asoumare042024.workers.dev
 .rating6.kingsoft-office-service.com
 .raw.vidyard.com
 .rcgi.video.qq.com
-.rcm-images.amazon.com
 .rd.e.sogou.com
 .rdstat.tanx.com
 .re.m.taobao.com
@@ -3927,7 +3904,6 @@
 .reachmax.cn
 .read.medium.com
 .recmd.html5.qq.com
-.recs-api.conde.digital
 .redir.metaservices.microsoft.com
 .redirect.simba.taobao.com
 .redrain-aglnsy.bytedance.com
@@ -3957,7 +3933,6 @@
 .rh.qq.com
 .rich.qq.com
 .richmedia.video.qq.com
-.richmedia.yimg.com
 .riqhisfus.com
 .risk.clearbit.com
 .river.zhidao.baidu.com
@@ -3989,6 +3964,7 @@
 .rubiconproject.com
 .rum-metrics.bunny.net
 .rum.condenastdigital.com
+.ruw82qpzxas.appspot.com
 .s-adashx.ut.uc.cn
 .s.360.cn
 .s.baidu.com
@@ -3997,7 +3973,6 @@
 .s.gxv.test.ajo.adobe.com
 .s.img.mix.sina.com.cn
 .s.lenovo.com
-.s.skimresources.com
 .s.so.360.cn
 .sa.api.intl.miui.com
 .sa.bbc.co.uk
@@ -4089,7 +4064,6 @@
 .shooter.m.jd.com
 .shouji.360.cn
 .shouji.sogou.com
-.show-msgch.qq.com
 .show.look.360.cn
 .showwxml.qq.com
 .shuaji.360.cn
@@ -4112,6 +4086,7 @@
 .slog.sina.com.cn
 .sm.toutiao.com
 .smartad.10010.com
+.smartlock.google.com
 .smetric.ads.microsoft.com
 .smetrics.accuweather.com
 .smetrics.afpjobs.amazon.com
@@ -4168,6 +4143,7 @@
 .srvcs.tumblr.com
 .ss-mndsrv.b-cdn.net
 .ssc.voacantonese.com
+.ssdkauth.hpplay.cn
 .ssl-cdn.static.browser.mi-img.com
 .ssl-google-analytics.l.google.com
 .ssp.qq.com
@@ -4221,7 +4197,6 @@
 .stats.adobe.com
 .stats.bbc.co.uk
 .stats.blogger.com
-.stats.fastcompany.com
 .stats.kaltura.com
 .stats.miui.com
 .stats.nymag.com
@@ -4244,6 +4219,7 @@
 .stdl.qq.com
 .stikroltiltoowi.net
 .stingcool-com.myshopify.com
+.stockbook-ads.firebaseio.com
 .stocks-analytics-events.apple.com
 .store.tv.api.3g.youku.com
 .store.xl.api.3g.youku.com
@@ -4257,7 +4233,6 @@
 .sugs.m.sm.cn
 .sunlightmetrics.b-cdn.net
 .supportmetrics.apple.com
-.survey.china.alibaba.com
 .susapi.lenovomm.com
 .suvset.sohu.com
 .svibeacon.onezapp.com
@@ -4336,7 +4311,7 @@
 .timon.zijieapi.com
 .tinglog.baidu.com
 .tiqcdn.com
-.titkoshirek.wordpress.com
+.tir94wepsdxox.appspot.com
 .tj.b.qq.com
 .tj.kugou.com
 .tj.video.qq.com
@@ -4373,7 +4348,6 @@
 .tongji.baidu.com
 .toolbar.baidu.com
 .toolbar.msn.com
-.toolbar.soso.com
 .tools.3g.qq.com
 .top.h.qhimg.com
 .toruk.tanx.com
@@ -4383,7 +4357,9 @@
 .tpstelemetry.tencent.com
 .tpush.html5.qq.com
 .tr.www.cloudflare.com
+.tr54sdsazxas.appspot.com
 .trace.qq.com
+.trace.svc.ui.com
 .trace.zhiyan.tencent-cloud.net
 .tracelog.www.alibaba.com
 .track-dark-bz.b-cdn.net
@@ -4435,6 +4411,7 @@
 .trkgbm.business.hsbc.com.hk
 .trkhinv.business.hsbc.com.hk
 .trksvg.business.hsbc.com.hk
+.tru465rsda.appspot.com
 .tsearch.snssdk.com
 .tsyndicate.com
 .tttppp.oss-cn-guangzhou.aliyuncs.com
@@ -4461,7 +4438,6 @@
 .udc.msn.com
 .udd1i5.zhihu.com
 .udpolimenew.baidu.com
-.uedata.amazon.com
 .ufosdk.baidu.com
 .ug.snssdk.com
 .uid.ksosoft.com
@@ -4491,9 +4467,7 @@
 .union.ucweb.com
 .unionimage.baidu.com
 .unitacs.m.taobao.com
-.unityads.unity.cn
 .unityads.unity3d.com
-.unstat.baidu.com
 .up-hl.3g.qq.com
 .up1.tj.u2.ucweb.com
 .up4.ucweb.com
@@ -4524,6 +4498,7 @@
 .utp.ucweb.com
 .uu.qq.com
 .uvgxhu.ezgif.com
+.uy054eprsdoz.appspot.com
 .uz-analysis.akamaized.net
 .v.shopify.com
 .v9banners-com.cdn.ampproject.org
@@ -4556,7 +4531,6 @@
 .visualscience.external.bbc.co.uk
 .vkcdnservice.appspot.com
 .vlive.qqvideo.tc.qq.com
-.voduscdn.azureedge.net
 .volcsiriusbd.com
 .vpic.video.qq.com
 .vs19.gzcu.u3.ucweb.com
@@ -4567,6 +4541,7 @@
 .vv.video.qq.com
 .vwonwkaqvq-a.global.ssl.fastly.net
 .w.gdown.baidu.com
+.w.isx.unity3d.com
 .w.m.taobao.com
 .w2g-ping.b-cdn.net
 .w3-reporting-nel.reddit.com
@@ -4611,6 +4586,7 @@
 .win10.ipv6.microsoft.com
 .win1710.ipv6.microsoft.com
 .win8.ipv6.microsoft.com
+.windowsphishingalert158.s3.amazonaws.com
 .winonexd.b-cdn.net
 .wip3.adobe.com
 .wisepush.video.baidu.com
@@ -4636,8 +4612,6 @@
 .wwis-dubc1-vip60.adobe.com
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
-.www.addtoany.com
-.www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .www7.springer.com
 .wxaintpcos.wxqcloud.qq.com.cn
@@ -4648,6 +4622,7 @@
 .x.baidu.com
 .x.clearbit.com
 .x.weather.com
+.xasf32easzx.appspot.com
 .xc.mydrivers.com
 .xcf-bd-js.chuimg.com
 .xdcs-collector.ximalaya.com
@@ -4664,6 +4639,7 @@
 .xmaterial.tu.qq.com
 .xmpush.xiaomi.com
 .xne1ocient87zxz.360doc.cn
+.xoada0pzosa.appspot.com
 .xp2023-pix.s3.amazonaws.com
 .xpj08.oss-cn-beijing.aliyuncs.com
 .xpjcg.oss-accelerate.aliyuncs.com
@@ -4691,7 +4667,10 @@
 .yt-adp.nosdn.127.net
 .yt-adp.ws.126.net
 .yt.mmstat.com
+.ytuy45fxs.appspot.com
+.yu56tdfcxc.appspot.com
 .yuedu.iqiyi.com
+.yuhfdwesaa.appspot.com
 .yule.sohu.com
 .yun-hl.3g.qq.com
 .yunxinfw.com
@@ -4760,7 +4739,6 @@ api.e.kuaishou.com
 api.g.micloud.xiaomi.net
 api.hybrid.intl.xiaomi.com
 api.hybrid.xiaomi.com
-api.sec.intl.miui.com
 api.yuedu.iqiyi.com
 api2.e.kuaishou.com
 apiv4-iyes.youku.com
@@ -4815,6 +4793,7 @@ dns.wechat.com
 download.wan.sohu.com
 dr.netease.im
 du.163.com
+edgecast-vod.yimg.com
 encounter.bz.mgtv.com
 err.taobao.com
 events-analytics.apple.com
@@ -4941,6 +4920,7 @@ proxy-mob-cld.alicdn.com
 prt-stsdk.vivo.com.cn
 qgnu18wo.sina.cn
 qiye.xiaomi.com
+qring-tms.qq.com
 quickaplus-server-api-cn-zhangjiakou.aliyuncs.com
 r.dmp.sina.cn
 r.dmp.sina.com.cn
