--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,9 +1,10 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-07-25 09:41:51
-# Total rules: 4996
+# Generated from relevant_rules_wildcard_aware.txt on 2025-07-25 14:48:27
+# Total rules: 5062
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
 .1080872514.rsc.cdn77.org
+.1097834592.rsc.cdn77.org
 .1187531871.rsc.cdn77.org
 .119.29.196.104.bc.googleusercontent.com
 .1208344341.rsc.cdn77.org
@@ -89,6 +90,7 @@
 .ad.cyapi.cn
 .ad.dev.360.cn
 .ad.docer.wps.cn
+.ad.eporner.com
 .ad.gmw.cn
 .ad.hpplay.cn
 .ad.imp.joins.com
@@ -125,6 +127,7 @@
 .ad4.sina.com.cn
 .ad5.sina.com.cn
 .ada.baidu.com
+.adagiobanner.s3.amazonaws.com
 .adapi.foooooot.com
 .adash-c.m.taobao.com
 .adash-c.ut.taobao.com
@@ -345,6 +348,7 @@
 .aepxlg.adobe.com
 .afd.baidu.com
 .afd.l.google.com
+.affiliate.googleusercontent.com
 .affim.baidu.com
 .afp.alicdn.com
 .afp.iqiyi.com
@@ -468,6 +472,7 @@
 .api.miwifi.com
 .api.mp.uc.cn
 .api.newsfeed.intl.miui.com
+.api.optnmnstr.com
 .api.sec.intl.miui.com
 .api.setting.intl.miui.com
 .api.sprig.com
@@ -671,17 +676,51 @@
 .c-adash.m.taobao.com
 .c-nfa.jd.com
 .c.alimama.com
+.c.ar.msn.com
 .c.arstechnica.com
+.c.at.msn.com
 .c.baidu.com
+.c.be.msn.com
+.c.br.msn.com
+.c.ca.msn.com
+.c.cl.msn.com
+.c.de.msn.com
+.c.dk.msn.com
+.c.es.msn.com
+.c.fi.msn.com
+.c.fr.msn.com
 .c.gj.qq.com
+.c.gr.msn.com
+.c.hk.msn.com
+.c.id.msn.com
+.c.ie.msn.com
+.c.il.msn.com
+.c.in.msn.com
+.c.it.msn.com
+.c.jp.msn.com
+.c.latam.msn.com
 .c.live.com
 .c.mse.360.cn
 .c.msn.com
+.c.my.msn.com
 .c.newyorker.com
+.c.nl.msn.com
+.c.no.msn.com
+.c.ph.msn.com
+.c.prodigy.msn.com
+.c.pt.msn.com
+.c.ru.msn.com
 .c.sayhi.360.cn
+.c.se.msn.com
+.c.sg.msn.com
+.c.th.msn.com
+.c.tr.msn.com
+.c.tw.msn.com
 .c.uaa.iqiyi.com
+.c.uk.msn.com
 .c.wired.com
 .c.yes.youku.com
+.c.za.msn.com
 .c00.adobe.com
 .c0nt4ct-me.pages.dev
 .c1-stats.shopifysvc.com
@@ -782,6 +821,7 @@
 .cms.tanx.com
 .cms.ucweb.com
 .cmshow.gtimg.cn
+.cmweb.ilike.alibaba.com
 .cn-vmc-images.alicdn.com
 .cn.vercount.one
 .cnzz.com
@@ -2312,6 +2352,7 @@
 .demkc32bq01ah.cloudfront.net
 .demo.emaillpb.adobe.com
 .demoamericas275.adobe.com
+.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .dev-push.m.youku.com
 .dev.email-signify.cjm.adobe.com
@@ -2528,6 +2569,7 @@
 .dqd5t8xfxmhi7.cloudfront.net
 .dqif5bl25s0bf.cloudfront.net
 .dqv45r33u0ltv.cloudfront.net
+.dr.soso.com
 .dr3k6qonw2kee.cloudfront.net
 .dr6su5ow3i7eo.cloudfront.net
 .dr6vcclmzwk74.cloudfront.net
@@ -2674,6 +2716,7 @@
 .ecommstats.s3.amazonaws.com
 .ecpm.tanx.com
 .edge.adobedc.net
+.edgecast-vod.yimg.com
 .edigitalsurvey.com
 .edith-seb.xiaohongshu.com
 .eduad.baidu.com
@@ -3159,6 +3202,7 @@
 .imdns.hpplay.cn
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
+.img.alibaba.com
 .img.gou.wpscdn.cn
 .img.response.digicert.com
 .img1.126.net
@@ -3174,6 +3218,7 @@
 .improving.duckduckgo.com
 .imtt.qq.com
 .in.applicationinsights.azure.com
+.in.yimg.com
 .indexww.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
@@ -3252,6 +3297,7 @@
 .jswebcollects.kugou.com
 .juggler.services.disqus.com
 .jun01.oss-cn-beijing.aliyuncs.com
+.jzclick.soso.com
 .jzt.jd.com
 .k.qwant.com
 .k87yfgsdaa.appspot.com
@@ -3526,6 +3572,7 @@
 .mobileads.google.com
 .mobileads.msn.com
 .mobileanalytics.us-east-1.amazonaws.com
+.mobileleads.msn.com
 .mobilelog.kugou.com
 .mobilem.360.cn
 .mobilemsg.youku.com
@@ -3625,6 +3672,7 @@
 .nsclick.baidu.com
 .nsclickvideo.baidu.com
 .nxet1.360doc.cn
+.nytadvertising.nytimes.com
 .o.isx.unity3d.com
 .o.lenovo.com
 .o209266.ingest.us.sentry.io
@@ -3633,11 +3681,13 @@
 .oca.microsoft.com
 .oceanengine.com
 .odc.weather.com
+.offer.alibaba.com
 .offnavi.map.baidu.com
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
 .ohm-dot-hackster-io.appspot.com
 .oi8ytfzxa.appspot.com
+.oimsgad.qq.com
 .omappapi.com
 .omgid.qq.com
 .omgmta1.qq.com
@@ -3759,6 +3809,8 @@
 .pindao.huoban.taobao.com
 .ping.acc.sogou.com
 .pingback.sogou.com
+.pingfore.qq.com
+.pingfore.soso.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pingma.qq.com
@@ -3808,6 +3860,7 @@
 .presence.teams.live.com
 .presentationtracking.netflix.com
 .preview.msn.com
+.prexyone.appspot.com
 .privacy-center.org
 .privacy-policy.truste.com
 .projecta-common-1258344701.file.myqcloud.com
@@ -3869,8 +3922,10 @@
 .qpb0.sohu.com
 .qpb1.sohu.com
 .qqdata.ab.qq.com
+.qqlogo.qq.com
 .qqshow2-item.qq.com
 .qreport.qunar.com
+.qring-tms.qq.com
 .qrl.existence.pp.ua
 .qss-client.qq.com
 .qubitanalytics.appspot.com
@@ -3894,9 +3949,11 @@
 .rad.microsoft.com
 .rad.msn.com
 .rads.msn.com
+.rads.stackoverflow.com
 .rating6.kingsoft-office-service.com
 .raw.vidyard.com
 .rcgi.video.qq.com
+.rcm-images.amazon.com
 .rd.e.sogou.com
 .rdstat.tanx.com
 .re.m.taobao.com
@@ -3933,6 +3990,7 @@
 .rh.qq.com
 .rich.qq.com
 .richmedia.video.qq.com
+.richmedia.yimg.com
 .riqhisfus.com
 .risk.clearbit.com
 .river.zhidao.baidu.com
@@ -3973,6 +4031,7 @@
 .s.gxv.test.ajo.adobe.com
 .s.img.mix.sina.com.cn
 .s.lenovo.com
+.s.skimresources.com
 .s.so.360.cn
 .sa.api.intl.miui.com
 .sa.bbc.co.uk
@@ -4064,6 +4123,7 @@
 .shooter.m.jd.com
 .shouji.360.cn
 .shouji.sogou.com
+.show-msgch.qq.com
 .show.look.360.cn
 .showwxml.qq.com
 .shuaji.360.cn
@@ -4233,6 +4293,7 @@
 .sugs.m.sm.cn
 .sunlightmetrics.b-cdn.net
 .supportmetrics.apple.com
+.survey.china.alibaba.com
 .susapi.lenovomm.com
 .suvset.sohu.com
 .svibeacon.onezapp.com
@@ -4312,6 +4373,7 @@
 .tinglog.baidu.com
 .tiqcdn.com
 .tir94wepsdxox.appspot.com
+.titkoshirek.wordpress.com
 .tj.b.qq.com
 .tj.kugou.com
 .tj.video.qq.com
@@ -4348,6 +4410,7 @@
 .tongji.baidu.com
 .toolbar.baidu.com
 .toolbar.msn.com
+.toolbar.soso.com
 .tools.3g.qq.com
 .top.h.qhimg.com
 .toruk.tanx.com
@@ -4438,6 +4501,7 @@
 .udc.msn.com
 .udd1i5.zhihu.com
 .udpolimenew.baidu.com
+.uedata.amazon.com
 .ufosdk.baidu.com
 .ug.snssdk.com
 .uid.ksosoft.com
@@ -4467,7 +4531,9 @@
 .union.ucweb.com
 .unionimage.baidu.com
 .unitacs.m.taobao.com
+.unityads.unity.cn
 .unityads.unity3d.com
+.unstat.baidu.com
 .up-hl.3g.qq.com
 .up1.tj.u2.ucweb.com
 .up4.ucweb.com
@@ -4531,6 +4597,7 @@
 .visualscience.external.bbc.co.uk
 .vkcdnservice.appspot.com
 .vlive.qqvideo.tc.qq.com
+.voduscdn.azureedge.net
 .volcsiriusbd.com
 .vpic.video.qq.com
 .vs19.gzcu.u3.ucweb.com
@@ -4612,6 +4679,7 @@
 .wwis-dubc1-vip60.adobe.com
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
+.www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .www7.springer.com
 .wxaintpcos.wxqcloud.qq.com.cn
@@ -4793,7 +4861,6 @@ dns.wechat.com
 download.wan.sohu.com
 dr.netease.im
 du.163.com
-edgecast-vod.yimg.com
 encounter.bz.mgtv.com
 err.taobao.com
 events-analytics.apple.com
@@ -4920,7 +4987,6 @@ proxy-mob-cld.alicdn.com
 prt-stsdk.vivo.com.cn
 qgnu18wo.sina.cn
 qiye.xiaomi.com
-qring-tms.qq.com
 quickaplus-server-api-cn-zhangjiakou.aliyuncs.com
 r.dmp.sina.cn
 r.dmp.sina.com.cn
